--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ plugins {
 android {
     compileSdk 32
 
+    //导入依赖
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.example.studyapk"
         minSdk 31
@@ -35,4 +38,18 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //自动导入依赖
+    implementation 'io.github.bmob:android-sdk:3.8.16'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
+    implementation 'com.squareup.okio:okio:2.2.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    //ED框依赖
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    //implementation 'com.github.florent37:materialtextfield:1.0.1'
+    implementation 'com.nineoldandroids:library:2.4.0'
+
 }
